Fix scroll issue on ios

--- a/css/flash-cards.css
+++ b/css/flash-cards.css
@@ -1,3 +1,7 @@
+body {
+    position: fixed;
+}
+
 #main {
     display: inline-block;
     width: 100%;
